tests/ui/cp-use-after-consume.stderr
error[E0624]: associated function `new` is private
  --> tests/ui/cp-use-after-consume.rs:15:23
   |
15 |         unsafe { Txn::new(LaneId::new(1), hibana::control::Gen::ZERO) };
   |                       ^^^ private associated function
   |
  ::: src/control/automaton/txn.rs
   |
   |     pub(crate) unsafe fn new(lane: LaneId, generation: Gen) -> Self {
   |     --------------------------------------------------------------- private associated function defined here
